# routes/api.php
@@ -7,6 +7,7 @@ use App\Http\Controllers\Api\V1\Blog\BlogController;
 use App\Http\Controllers\Api\V1\User\UserController;
 use App\Http\Controllers\Api\V1\Productos\ProductoController;
 use App\Http\Controllers\Api\V1\Cliente\ClienteController;
+use App\Http\Controllers\PermissionController;
 
 Route::prefix('v1')->group(function () {
     Route::controller(AuthController::class)->prefix('auth')->group(function () {
@@ -55,6 +56,13 @@ Route::prefix('v1')->group(function () {
             Route::post('/', 'store');
             Route::put('/{id}', 'update');
             Route::delete('/{id}', 'destroy');
+        });
+    });
+
+    Route::controller(PermissionController::class)->prefix("/permisos")->group(function () {
+        Route::middleware(["auth:sanctum"])->group(function(){
+            Route::get('/', 'index');
+            Route::post('/', 'store');
         });
     });
 
